Rename System.ServiceModel back to System.Private.ServiceModel
When the name System.ServiceModel is used in some cases mono ends up by
loading the BCL assembly instead of the new one.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/wcf"]
 	path = external/wcf
 	url = git@github.com:esdrubal/wcf.git
+[submodule "external/buildtools"]
+	path = external/buildtools
+	url = git@github.com:dotnet/buildtools.git
