Renames nuspec to Mono.DotNet.WCF

--- a/nuget/Mono.DotNet.WCF.nuspec
+++ b/nuget/Mono.DotNet.WCF.nuspec
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/01/nuspec.xsd">
   <metadata minClientVersion="3.0">
-    <id>Mono.System.Private.ServiceModel</id>
-    <version>4.5.0.0</version>
-    <title>Mono.System.Private.ServiceModel</title>
+    <id>Mono.DotNet.WCF</id>
+    <version>0.9.0.0</version>
+    <title>Mono.DotNet.WCF</title>
     <authors>Mono,Xamarin</authors>
     <owners>mono,xamarin</owners>
     <projectUrl>https://github.com/esdrubal/wcf_component</projectUrl>
     <licenseUrl>https://raw.githubusercontent.com/mono/mono/master/LICENSE</licenseUrl>
     <iconUrl>https://avatars2.githubusercontent.com/u/53395?v=3&amp;s=256</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Provides implementation of System.ServiceModel packages.</description>
+    <description>Provides dotnet implementation of WCF client-oriented libraries.</description>
     <copyright>Copyright © Mono Authors. All rights reserved.</copyright>
   </metadata>
   <files>
